<resources>
    <string name="app_name">Rate a class</string>
    <string name="rate_course">Rate Course</string>
    <string name="view_courses">View Ratings</string>
    <string name="professorNameText"></string>
    <string name="classComments"></string>
    <string name="classRatingText">How did you feel about this class?</string>
    <string name="home">home</string>
    <string name="thank_you_for_your_review">Thank you for your review!</string>
    <string name="homeButton">Please tap the home button to return to the main screen.</string>
    <string name="search">Search</string>
    <string name="professorInputString">Enter your Professor\'s name:</string>
    <string name="courseSelectString">Select a course:</string>
    <string name="majorSelectString">Select a major:</string>
    <string name="submitButtonText">Submit</string>
    <string name="logoText">logo</string>
    <string name="comments_about_the_class">Comments about the class</string>
    <string name="professorSpinnerText">Professor</string>
    <string name="todo">TODO</string>
    <string-array name="courses">
        <item>Accounting</item>
        <item>Art</item>
        <item>Art Education</item>
        <item>Astronomy</item>
        <item>Biology</item>
        <item>Business Administration</item>
        <item>Chemistry</item>
        <item>Communication Arts</item>
        <item>Computer Science</item>
        <item>Criminal Justice</item>
        <item>Economics</item>
        <item>Education</item>
        <item>Education Early Childhood</item>
        <item>Education Middle School</item>
        <item>Elementary Education</item>
        <item>English</item>
        <item>Finance</item>
        <item>Forensic Science</item>
        <item>French</item>
        <item>Geography</item>
        <item>History</item>
        <item>Hospitality Management</item>
        <item>Italian</item>
        <item>Kinesiology</item>
        <item>Management</item>
        <item>Marketing</item>
        <item>Mathematics</item>
        <item>Music</item>
        <item>Philosophy</item>
        <item>Physics</item>
        <item>Political Science</item>
        <item>Psychology</item>
        <item>Religious Studies</item>
        <item>Science</item>
        <item>Secondary Education</item>
        <item>Sociology</item>
        <item>Spanish</item>
        <item>Special Education</item>
        <item>Writing</item>
    </string-array>
    <string-array name="art">
        <item>ART 101</item>
        <item>ART 200</item>
        <item>ART 202</item>
        <item>ART 203</item>
        <item>ART 204</item>
        <item>ART 205</item>
        <item>ART 210</item>
        <item>ART 211</item>
        <item>ART 215</item>
        <item>ART 216</item>
        <item>ART 217</item>
        <item>ART 218</item>
        <item>ART 219</item>
        <item>ART 227</item>
        <item>ART 228</item>
        <item>ART 229</item>
        <item>ART 231</item>
        <item>ART 232</item>
        <item>ART 233</item>
        <item>ART 237</item>
        <item>ART 239</item>
        <item>ART 240</item>
        <item>ART 241</item>
        <item>ART 245</item>
        <item>ART 247</item>
        <item>ART 250</item>
        <item>ART 261</item>
        <item>ART 290</item>
        <item>ART 302</item>
        <item>ART 305</item>
        <item>ART 308</item>
        <item>ART 309</item>
        <item>ART 311</item>
        <item>ART 318</item>
        <item>ART 322</item>
        <item>ART 325</item>
        <item>ART 327</item>
        <item>ART 329</item>
        <item>ART 330</item>
        <item>ART 331</item>
        <item>ART 332</item>
        <item>ART 335</item>
        <item>ART 337</item>
        <item>ART 341</item>
        <item>ART 345</item>
        <item>ART 345</item>
        <item>ART 347</item>
        <item>ART 350</item>
        <item>ART 375H</item>
        <item>ART 401</item>
        <item>ART 402</item>
        <item>ART 403</item>
        <item>ART 407</item>
        <item>ART 409</item>
        <item>ART 410</item>
        <item>ART 411</item>
        <item>ART 413</item>
        <item>ART 420</item>
        <item>ART 424</item>
        <item>ART 430</item>
        <item>ART 450</item>
    </string-array>
    <string-array name="astr">
        <item>ASTR 101</item>
        <item>ASTR 201</item>
        <item>ASTR 300</item>
    </string-array>
    <string-array name="bio">
        <item>BIO 101</item>
        <item>BIO 102</item>
        <item>BIO 105</item>
        <item>BIO 111</item>
        <item>BIO 120</item>
        <item>BIO 130</item>
        <item>BIO 140</item>
        <item>BIO 150</item>
        <item>BIO 171</item>
        <item>BIO 172</item>
        <item>BIO 173</item>
        <item>BIO 174</item>
        <item>BIO 251</item>
        <item>BIO 252</item>
        <item>BIO 300</item>
        <item>BIO 307</item>
        <item>BIO 309</item>
        <item>BIO 311</item>
        <item>BIO 317</item>
        <item>BIO 320</item>
        <item>BIO 325</item>
        <item>BIO 350</item>
        <item>BIO 403</item>
        <item>BIO 404</item>
        <item>BIO 405</item>
        <item>BIO 406</item>
        <item>BIO 407</item>
        <item>BIO 430</item>
        <item>BIO 431</item>
        <item>BIO 432</item>
        <item>BIO 450-455</item>
    </string-array>
    <string-array name="chem">
        <item>CHEM 101</item>
        <item>CHEM 102</item>
        <item>CHEM 105</item>
        <item>CHEM 171</item>
        <item>CHEM 172</item>
        <item>CHEM 173</item>
        <item>CHEM 174</item>
        <item>CHEM 251</item>
        <item>CHEM 252</item>
        <item>CHEM 300</item>
        <item>CHEM 301</item>
        <item>CHEM 302</item>
        <item>CHEM 305</item>
        <item>CHEM 310</item>
        <item>CHEM 400</item>
        <item>CHEM 403</item>
        <item>CHEM 407</item>
        <item>CHEM 408</item>
    </string-array>
    <string-array name="ca">
        <item>CA 101</item>
        <item>CA 115</item>
        <item>CA 150</item>
        <item>CA 160</item>
        <item>CA 170</item>
        <item>CA 199</item>
        <item>CA 200</item>
        <item>CA 201</item>
        <item>CA 203</item>
        <item>CA 204</item>
        <item>CA 205</item>
        <item>CA 209</item>
        <item>CA 210</item>
        <item>CA 213</item>
        <item>CA 214</item>
        <item>CA 216</item>
        <item>CA 217</item>
        <item>CA 219</item>
        <item>CA 220</item>
        <item>CA 221</item>
        <item>CA 230</item>
        <item>CA 231</item>
        <item>CA 240</item>
        <item>CA 241</item>
        <item>CA 245</item>
        <item>CA 300</item>
        <item>CA 301</item>
        <item>CA 309</item>
        <item>CA 310</item>
        <item>CA 311</item>
        <item>CA 314</item>
        <item>CA 314</item>
        <item>CA 315</item>
        <item>CA 316</item>
        <item>CA 320</item>
        <item>CA 322</item>
        <item>CA 325</item>
        <item>CA 326</item>
        <item>CA 330</item>
        <item>CA 331</item>
        <item>CA 335</item>
        <item>CA 340</item>
        <item>CA 341</item>
        <item>CA 407</item>
        <item>CA 410-411</item>
    </string-array>
    <string-array name="cs">
        <item>CS 101</item>
        <item>CS 111</item>
        <item>CS 150</item>
        <item>CS 211</item>
        <item>CS 230</item>
        <item>CS 250</item>
        <item>CS 260</item>
        <item>CS 270</item>
        <item>CS 300</item>
        <item>CS 301</item>
        <item>CS 305</item>
        <item>CS 310</item>
        <item>CS 320</item>
        <item>CS 350</item>
        <item>CS 360</item>
        <item>CS 370</item>
        <item>CS 371</item>
        <item>CS 380</item>
        <item>CS 420</item>
        <item>CS 424</item>
        <item>CS 435</item>
        <item>CS 450</item>
        <item>CS 485</item>
        <item>CS 490</item>
    </string-array>
    <string-array name="cj">
        <item>CJ 101</item>
        <item>CJ 103</item>
        <item>CJ 105</item>
        <item>CJ 200</item>
        <item>CJ 201</item>
        <item>CJ 205</item>
        <item>CJ 206</item>
        <item>CJ 209</item>
        <item>CJ 210</item>
        <item>CJ 211</item>
        <item>CJ 214</item>
        <item>CJ 230</item>
        <item>CJ 241</item>
        <item>CJ 300</item>
        <item>CJ 301</item>
        <item>CJ 303</item>
        <item>CJ 304</item>
        <item>CJ 305</item>
        <item>CJ 306</item>
        <item>CJ 307</item>
        <item>CJ 312</item>
        <item>CJ 314</item>
        <item>CJ 315</item>
        <item>CJ 319</item>
        <item>CJ 350</item>
        <item>CJ 401</item>
        <item>CJ 403</item>
        <item>CJ 405</item>
        <item>CJ 410</item>
    </string-array>
    <string-array name="eng">
        <item>ENG 175H</item>
        <item>ENG 176H</item>
        <item>ENG 201</item>
        <item>ENG 203</item>
        <item>ENG 205</item>
        <item>ENG 207</item>
        <item>ENG 208</item>
        <item>ENG 209</item>
        <item>ENG 211</item>
        <item>ENG 221</item>
        <item>ENG 232</item>
        <item>ENG 300</item>
        <item>ENG 303</item>
        <item>ENG 304</item>
        <item>ENG 305</item>
        <item>ENG 306</item>
        <item>ENG 307</item>
        <item>ENG 309</item>
        <item>ENG 311</item>
        <item>ENG 312</item>
        <item>ENG 313</item>
        <item>ENG 315</item>
        <item>ENG 318</item>
        <item>ENG 319</item>
        <item>ENG 320</item>
        <item>ENG 325</item>
        <item>ENG 326</item>
        <item>ENG 327</item>
        <item>ENG 342</item>
        <item>ENG 332</item>
        <item>ENG 345</item>
        <item>ENG 346</item>
        <item>ENG 347</item>
        <item>ENG 351</item>
        <item>ENG 380</item>
        <item>ENG 381</item>
        <item>ENG 382</item>
        <item>ENG 400</item>
        <item>ENG 401</item>
        <item>ENG 402</item>
        <item>ENG 409</item>
        <item>ENG 410</item>
        <item>ENG 411</item>
    </string-array>
    <string-array name="kin">
        <item>KIN 101</item>
        <item>KIN 110</item>
        <item>KIN 201</item>
        <item>KIN 330</item>
        <item>KIN 333</item>
        <item>KIN 340</item>
        <item>KIN 350</item>
        <item>KIN 401</item>
        <item>KIN 410</item>
    </string-array>
    <string-array name="fs">
        <item>FS 101</item>
        <item>FS 201</item>
        <item>FS 405</item>
        <item>FS 407</item>
        <item>FS 410</item>
        <item>FS 415</item>
    </string-array>
    <string-array name="fr">
        <item>FR 101</item>
        <item>FR 102</item>
        <item>FR 200</item>
        <item>FR 201</item>
        <item>FR 202</item>
        <item>FR 205</item>
        <item>FR 210</item>
        <item>FR 211</item>
    </string-array>
    <string-array name="geog">
        <item>GEOG 201</item>
        <item>GEOG 202</item>
        <item>GEOG 301</item>
        <item>GEOG 302</item>
        <item>GEOG 401</item>
    </string-array>
</resources>