<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6C2E45"
    tools:context=".rateCourse">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/comments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/majorSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/majorSelectString"
                android:textColor="#FFFFFF" />

            <Spinner
                android:id="@+id/courseName"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:entries="@array/courses"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="189dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/courseInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/courseSelectString"
                android:textColor="#FFFFFF" />

            <Spinner
                android:id="@+id/courseNumber"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/professorInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:lines="2"
                android:text="@string/professorInputString"
                android:textColor="#FFFFFF"
                android:layout_gravity="start"
                android:paddingEnd="10dp"
                />

            <EditText
                android:id="@+id/professorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:ellipsize="start"
                android:ems="12"
                android:hint="@string/professorSpinnerText"
                android:inputType="text"
                android:maxLength="20"
                android:singleLine="true"
                android:text="@string/professorNameText"
                android:textColorHint="#000000"
                android:layout_gravity="center"
                tools:targetApi="o"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ratingClassStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:lines="3"
                android:paddingBottom="15dp"
                android:text="@string/classRatingText"
                android:textColor="#FFFFFF" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:progressTint="@color/yellowButton"
                android:rating="3"
                android:stepSize="1" />
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/comments"
        android:layout_width="300dp"
        android:layout_height="131dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp"
        android:background="@color/white"
        android:ems="12"
        android:gravity="top|start"
        android:hint="@string/comments_about_the_class"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="6"
        android:maxLength="200"
        android:singleLine="true"
        android:scrollbars="vertical"
        android:text="@string/classComments"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="92dp"
        android:background="@color/yellowButton"
        android:text="@string/submitButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comments" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="189dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ratelogo"
        android:contentDescription="@string/logoText" />

</androidx.constraintlayout.widget.ConstraintLayout>