<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6C2E45"
    tools:context=".startUpScreen">

    <Button
        android:id="@+id/viewCourse"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="217dp"
        android:background="@drawable/border"
        android:text="@string/view_courses"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rateCourse" />

    <Button
        android:id="@+id/rateCourse"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="59dp"
        android:background="@drawable/border"
        android:text="@string/rate_course"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/viewCourse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="224dp"
        android:layout_height="262dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="453dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ratelogo"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>